syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.killbill.billing.queue.rpc.gen";

option go_package = "github.com/killbill/standalone-queue;queue";

package queue;

import "google/protobuf/timestamp.proto";


service QueueApi {
  rpc PostEvent (EventMsg) returns (PostEventResponse);
  rpc SubscribeEvents (SubscriptionRequest) returns (stream EventMsg);
  rpc Close (CloseRequest) returns (CloseResponse);
}


message EventMsg {
	string client_id = 1;
    string event_json = 3;
    string user_token = 4;
    string future_user_token = 5;
	google.protobuf.Timestamp effective_date = 6;
    int64 search_key1 = 7;
    int64 search_key2 = 8;
}

message PostEventResponse {
}


message CloseRequest {
	string client_id = 1;
}

message CloseResponse {
}

message SubscriptionRequest {
    string client_id = 1;
    int64 search_key2 = 2;
}

message SubscriptionResponse {
}


